# roku-tui

./: .gitignore  README.md  pyproject.toml
docs/: USER_MANUAL.md
src/roku_tui/: __init__.py  __main__.py  app.py  audio.py  discovery.py  ecp_session.py  errors.py  remote.py  storage.py
tests/: conftest.py  fixtures.py  test_app.py  test_audio.py  test_discovery.py  test_ecp_session.py  test_errors.py  test_remote.py  test_storage.py
