[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roku-tui"
version = "0.1.0"
description = "A TUI application for discovering and controlling Roku devices on your local network"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40.0",
    "httpx>=0.27.0",
]

[project.scripts]
roku-tui = "roku_tui.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roku_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["roku_tui"]

[tool.coverage.report]
show_missing = true
fail_under = 90
